[package]
name = "pyra"
version = "0.0.1"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"
description = "Pyra is a high-level distributed ledger development interface, written in Rust and capable of running on top of Substrate, Polkadot, Edgeware, or Straightedge"
license-file = "LICENSE"
readme = "README.md"
keywords = ["cli", "distributed-ledger", "interface"]
categories = ["command-line-utilities"]
repository = "https://github.com/parachain-tracker/pyra"

[badges]
travis-ci = { repository = "parachain-tracker/pyra", branch = "master" }

[dependencies]
dirs = "2.0.2"
structopt = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
dialoguer = "0.4.0"
colored = "1.8"
webbrowser = "0.5.2"
signal-hook = "0.1.7"
log = "0.4"

[[bin]]
name="pyra"
path="src/main.rs"
