[package]
name = "pyra"
version = "0.0.8"
authors = ["Hyungsuk Kang <hskang9@gmail.com>"]
edition = "2018"
description = "Pyra is a high-level distributed ledger development interface, written in Rust and capable of running on top of Substrate, Polkadot, and many more"
license-file = "LICENSE"
readme = "README.md"
keywords = ["cli", "distributed-ledger", "interface"]
categories = ["command-line-utilities"]
repository = "https://github.com/parachain-tracker/pyra"

[badges]
travis-ci = { repository = "parachain-tracker/pyra", branch = "master" }

[dependencies]
dirs = "2.0.2"
structopt = "0.3.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] } 
dialoguer = "0.4.0"
colored = "1.8"
webbrowser = "0.5.2"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4"
indicatif = "0.12.0"
console = "0.9.0"
rand = "0.7.2"


[[bin]]
name="pyra"
path="src/main.rs"
